crates/php-parser/tests/fixtures/errors/invalid_double_readonly_anonymous_class.php
<?php new readonly readonly class {};